--- a/packages/cloud-cognitive/src/components/Datagrid/styles/datagrid.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/datagrid.scss
@@ -137,15 +137,9 @@
 
 .#{$block-class}__grid-container {
   display: block;
-  overflow: auto;
   width: 100%;
+  height: 100%;
   padding-top: 0;
-
-  .#{$carbon-prefix}--data-table-content {
-    overflow: auto;
-    width: 100%;
-    height: 100%;
-  }
 
   .#{$block-class}__table-simple {
     overflow: hidden;
@@ -262,6 +256,10 @@
   .#{$block-class}__with-pagination
   .#{$block-class}__datagridLeftPanel {
   height: calc(100% + 40px);
+}
+
+.#{$block-class}__grid-container.#{$block-class}__with-pagination {
+  height: calc(100% - 40px);
 }
 
 .#{$block-class}__resizer {
@@ -381,10 +379,17 @@
   .#{$carbon-prefix}--data-table-content {
     flex: 1 1 0%;
   }
+  .#{$block-class}__table-container {
+    overflow: hidden;
+  }
 }
 
 .#{$block-class}__table-container {
+  position: relative;
   display: flex;
+  overflow: auto;
+  width: 100%;
+  max-height: 100%;
 }
 
 .#{$block-class}__table-toolbar + .#{$block-class}__table-container {
